test/Fail/ParseForallAbsurd.err
ParseForallAbsurd.agda:5,22-22
ParseForallAbsurd.agda:5,22:
Parse error )<ERROR> -> Set1 parseFails x = Set --...
